--- a/index.html
+++ b/index.html
@@ -5,27 +5,44 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>WebStudio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./css/style.css" />
     </head>
 
     <body>
-        <header>
-            <nav>
-                <a href="">WebStudio</a>
-                <ul>
-                    <li>
-                        <a href="">Студия</a>
+        <header class="header">
+            <nav class="navigation">
+                <a class="logo" href="">WebStudio</a>
+                <ul class="nav-list list">
+                    <li class="nav-list-item">
+                        <a class="nav-list-link link" href="">Студия</a>
                     </li>
                     <li>
-                        <a href="">Портфолио</a>
+                        <a class="nav-list-link link" href="">Портфолио</a>
                     </li>
                     <li>
-                        <a href="">Контакты</a>
+                        <a class="nav-list-link link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
-            <ul>
-                <li><a href="e-mail:info@devstudio.com">info@devstudio.com</li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="contact-list list">
+                <li class="contact-list-item">
+                    <a
+                        class="contact-list-link link"
+                        href="mailto:info@devstudio.com"
+                        >info@devstudio.com</a
+                    >
+                </li>
+                <li class="contact-list-item">
+                    <a class="contact-list-link link" href="tel:+380961111111"
+                        >+38 096 111 11 11</a
+                    >
+                </li>
             </ul>
         </header>
 
@@ -148,13 +165,31 @@
         <footer>
             <a href="">WebStudio</a>
             <address>
-            <ul>
-                <li>
-                    <a href="https://goo.gl/maps/PYqKrLdg8AjsLL8RA" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li><a href="e-mail:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380961111111">+38 099 111 11 11</a></li>
-            </ul>
+                <ul class="contact-list list">
+                    <li class="contact-list-item">
+                        <a
+                            class="contact-list-link link"
+                            href="https://goo.gl/maps/PYqKrLdg8AjsLL8RA"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >г. Киев, пр-т Леси Украинки, 26</a
+                        >
+                    </li>
+                    <li class="contact-list-item">
+                        <a
+                            class="contact-list-link link"
+                            href="mailto:info@example.com"
+                            >info@example.com</a
+                        >
+                    </li>
+                    <li class="contact-list-item">
+                        <a
+                            class="contact-list-link link"
+                            href="tel:+380961111111"
+                            >+38 099 111 11 11</a
+                        >
+                    </li>
+                </ul>
             </address>
         </footer>
     </body>
