--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title class="title-link"><span class="accent">Web</span>Studio</title>
+        <title>WebStudio</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -18,29 +18,33 @@
         <!-- HEADER -->
         <header class="header">
             <nav class="navigation">
-                <a class="logo" href="">WebStudio</a>
+                <a lang="en" class="logo" href="./index.html"
+                    >Web<span class="logo-accent-header">Studio</span></a
+                >
                 <ul class="nav-list list">
                     <li class="nav-list-item">
-                        <a class="nav-list-link link" href="">Студия</a>
+                        <a class="nav-list-link current" href="">Студия</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a class="nav-list-link" href="./portfolio.html"
+                            >Портфолио</a
+                        >
                     </li>
                     <li>
-                        <a class="nav-list-link link" href="">Портфолио</a>
-                    </li>
-                    <li>
-                        <a class="nav-list-link link" href="">Контакты</a>
+                        <a class="nav-list-link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
             <ul class="contact-list list">
                 <li class="contact-list-item">
                     <a
-                        class="contact-list-link link"
+                        class="contact-list-link"
                         href="mailto:info@devstudio.com"
                         >info@devstudio.com</a
                     >
                 </li>
                 <li class="contact-list-item">
-                    <a class="contact-list-link link" href="tel:+380961111111"
+                    <a class="contact-list-link" href="tel:+380961111111"
                         >+38 096 111 11 11</a
                     >
                 </li>
@@ -48,37 +52,47 @@
         </header>
 
         <main>
+            <!-- HERO -->
             <section class="hero">
-                <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+                <h1 class="main-title">
+                    Эффективные решения для вашего бизнеса
+                </h1>
                 <button class="modal-btn" type="button">Заказать услугу</button>
             </section>
 
+            <!-- BENEFITS -->
             <section class="benefits">
-                <h2 class="overtitle">Наши преимущества</h2>
+                <h2 class="title">Наши преимущества</h2>
                 <ul class="benefits-list list">
                     <li class="benefits-list-item">
-                        <h3 class="title title-theme-dark">Внимание к деталям</h3>
+                        <h3 class="subtitle title-theme-dark">
+                            Внимание к деталям
+                        </h3>
                         <p class="description">
                             Идейные соображения, а также начало повседневной
                             работы по формированию позиции.
                         </p>
                     </li>
                     <li class="benefits-list-item">
-                        <h3 class="title title-theme-dark">Пунктуальность</h3>
+                        <h3 class="subtitle title-theme-dark">
+                            Пунктуальность
+                        </h3>
                         <p class="description">
                             Задача организации, в особенности же рамки и место
                             обучения кадров влечет за собой.
                         </p>
                     </li>
                     <li class="benefits-list-item">
-                        <h3 class="title title-theme-dark">Планирование</h3>
+                        <h3 class="subtitle title-theme-dark">Планирование</h3>
                         <p class="description">
                             Равным образом консультация с широким активом в
                             значительной степени обуславливает.
                         </p>
                     </li>
                     <li class="benefits-list-item">
-                        <h3 class="title title-theme-dark">Современные технологии</h3>
+                        <h3 class="subtitle title-theme-dark">
+                            Современные технологии
+                        </h3>
                         <p class="description">
                             Значимость этих проблем настолько очевидна, что
                             реализация плановых заданий.
@@ -87,8 +101,9 @@
                 </ul>
             </section>
 
+            <!-- SERVICES -->
             <section class="services">
-                <h2 class="overtitle">Чем мы занимаемся</h2>
+                <h2 class="title">Чем мы занимаемся</h2>
                 <ul class="services-list list">
                     <li class="services-list-item">
                         <img
@@ -117,77 +132,88 @@
                 </ul>
             </section>
 
+            <!-- TEAM -->
             <section class="team">
-                <h2 class="overtitle">Наша команда</h2>
+                <h2 class="title">Наша команда</h2>
                 <ul class="employees-list list">
                     <li class="employee-card">
-                    <img class="employee-photo" 
+                        <img
+                            class="employee-photo"
                             src="./images/product-designer.jpg"
                             alt="Игорь Демьяненко"
                             width="270"
                             height="260"
                         />
                         <h3 class="employee-name">Игорь Демьяненко</h3>
-                        <p class="employee-position">Product Designer</p>
+                        <p lang="en" class="employee-position">
+                            Product Designer
+                        </p>
                     </li>
                     <li class="employee-card">
-                    <img class="employee-photo"
+                        <img
+                            class="employee-photo"
                             src="./images/frontend-developer.jpg"
                             alt="Ольга Репина"
                             width="270"
                             height="260"
                         />
                         <h3 class="employee-name">Ольга Репина</h3>
-                        <p class="employee-position">Frontend Developer</p>
+                        <p lang="en" class="employee-position">
+                            Frontend Developer
+                        </p>
                     </li>
                     <li class="employee-card">
-                    <img class="employee-photo"
+                        <img
+                            class="employee-photo"
                             src="./images/marketing.jpg"
                             alt="Николай Тарасов"
                             width="270"
                             height="260"
                         />
                         <h3 class="employee-name">Николай Тарасов</h3>
-                        <p class="employee-position">Marketing</p>
+                        <p lang="en" class="employee-position">Marketing</p>
                     </li>
                     <li class="employee-card">
-                        <img class="employee-photo" 
+                        <img
+                            class="employee-photo"
                             src="./images/ui-designer.jpg"
                             alt="Михаил Ермаков"
                             width="270"
                             height="260"
                         />
                         <h3 class="employee-name">Михаил Ермаков</h3>
-                        <p class="employee-position">UI Designer</p>
+                        <p lang="en" class="employee-position">UI Designer</p>
                     </li>
                 </ul>
             </section>
         </main>
 
-        <footer>
-            <a class="title-link" href=""><span class="accent">Web</span>Studio</a>
+        <footer class="footer">
+            <a lang="en" class="logo" href="./index.html"
+                >Web<span class="logo-accent-footer">Studio</span></a
+            >
             <address>
                 <ul class="contact-list list">
                     <li class="contact-list-item">
                         <a
-                            class="contact-list-link link"
+                            class="contact-list-link"
                             href="https://goo.gl/maps/PYqKrLdg8AjsLL8RA"
                             target="_blank"
                             rel="noopener noreferrer"
-                            >г. Киев, пр-т Леси Украинки, 26</a
+                            ><span class="legal-address"
+                                >г. Киев, пр-т Леси Украинки, 26</span
+                            ></a
                         >
                     </li>
                     <li class="contact-list-item">
                         <a
-                            class="contact-list-link link"
+                            class="contact-list-link"
                             href="mailto:info@example.com"
                             >info@example.com</a
                         >
                     </li>
                     <li class="contact-list-item">
-                        <a
-                            class="contact-list-link link"
-                            href="tel:+380961111111"
+                        <a class="contact-list-link" href="tel:+380961111111"
                             >+38 099 111 11 11</a
                         >
                     </li>
