--- a/index.html
+++ b/index.html
@@ -205,15 +205,15 @@
                             ></a
                         >
                     </li>
-                    <li class="contact-list-item">
+                    <li class="contact-list-footer">
                         <a
-                            class="contact-list-link"
+                            class="contact-list-footer link"
                             href="mailto:info@example.com"
                             >info@example.com</a
                         >
                     </li>
-                    <li class="contact-list-item">
-                        <a class="contact-list-link" href="tel:+380961111111"
+                    <li class="contact-list-footer">
+                        <a class="contact-list-footer link" href="tel:+380961111111"
                             >+38 099 111 11 11</a
                         >
                     </li>
