--- a/portfolio.html
+++ b/portfolio.html
@@ -51,9 +51,7 @@
 
         <main>
             <section class="portfolio">
-                <h1 class="main-title">
-                    <span class="our-portfolio">Наши работы</span>
-                </h1>
+                <h1 class="title-portfolio">Наши работ2</h1>
                 <ul class="filter list">
                     <li class="filter-item">
                         <button
@@ -93,7 +91,7 @@
                                 width="370"
                                 height="294"
                             />
-                            <h3 class="project-name">Технокряк</h3>
+                            <h2 class="project-name">Технокряк</h2>
                             <p class="project-type">Веб-сайт</p>
                         </a>
                     </li>
@@ -105,10 +103,10 @@
                                 width="370"
                                 height="294"
                             />
-                            <h3 class="project-name">
+                            <h2 class="project-name">
                                 Постер
                                 <span lang="en">New Orlean vs Golden Star</span>
-                            </h3>
+                            </h2>
                             <p class="project-type">Дизайн</p>
                         </a>
                     </li>
@@ -120,9 +118,9 @@
                                 width="370"
                                 height="294"
                             />
-                            <h3 class="project-name">
+                            <h2 class="project-name">
                                 Ресторан <span lang="en">Seafood</span>
-                            </h3>
+                            </h2>
                             <p class="project-type">Приложение</p>
                         </a>
                     </li>
@@ -134,9 +132,9 @@
                                 width="370"
                                 height="294"
                             />
-                            <h3 class="project-name">
+                            <h2 class="project-name">
                                 Проект <span lang="en">Prime</span>
-                            </h3>
+                            </h2>
                             <p class="project-type">Маркетинг</p>
                         </a>
                     </li>
@@ -148,9 +146,9 @@
                                 width="370"
                                 height="294"
                             />
-                            <h3 class="project-name">
+                            <h2 class="project-name">
                                 Проект <span lang="en">Boxes</span>
-                            </h3>
+                            </h2>
                             <p class="project-type">Приложение</p>
                         </a>
                     </li>
@@ -162,9 +160,9 @@
                                 width="370"
                                 height="294"
                             />
-                            <h3 lang="en" class="project-name">
+                            <h2 lang="en" class="project-name">
                                 Inspiration has no Borders
-                            </h3>
+                            </h2>
                             <p class="project-type">Веб-сайт</p>
                         </a>
                     </li>
@@ -176,9 +174,9 @@
                                 width="370"
                                 height="294"
                             />
-                            <h3 class="project-name">
+                            <h2 class="project-name">
                                 Издание <span lang="en">Limited Edition</span>
-                            </h3>
+                            </h2>
                             <p class="project-type">Дизайн</p>
                         </a>
                     </li>
@@ -190,9 +188,9 @@
                                 width="370"
                                 height="294"
                             />
-                            <h3 class="project-name">
+                            <h2 class="project-name">
                                 Проект <span lang="en">LAB</span>
-                            </h3>
+                            </h2>
                             <p class="project-type">Маркетинг</p>
                         </a>
                     </li>
@@ -204,9 +202,9 @@
                                 width="370"
                                 height="294"
                             />
-                            <h3 lang="en" class="project-name">
+                            <h2 lang="en" class="project-name">
                                 Growing Business
-                            </h3>
+                            </h2>
                             <p class="project-type">Приложение</p>
                         </a>
                     </li>
