--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
 
         <main>
             <section class="portfolio">
-                <h1 class="title-portfolio">Наши работ2</h1>
+                <h1 class="title-portfolio">Наши работы</h1>
                 <ul class="filter list">
                     <li class="filter-item">
                         <button
